@@ -3,7 +3,10 @@
 	  patch from Ben Campbell for ILBM files at
 	  https://sourceforge.net/tracker2/index.php?func=detail&aid=2635333&group_id=4470&atid=304470.
 	* il_dpx.c / il_dpx.h: Added these files.
-	
+	* lib/Makefile.am: Added il_dpx.c and il_dpx.h to source/include lines.
+	* il_internal.h: Added .dpx loading declarations.
+	* il_io.c: Added loading calls for .dpx files.
+		
 2009-02-25 Denton Woods <doomwiz@users.sf.net>
 	* il_iwi.c:329: Changed IL_MAX parameter from 16 to 8 (copy+paste error).
 	* WindowsTest.cpp: Added mipmap functionality to 0-9 keys (0 goes to main image).
